Fix shifting issue

--- a/packages/reporter/src/runnables/runnables.scss
+++ b/packages/reporter/src/runnables/runnables.scss
@@ -169,6 +169,10 @@
     border-left: 5px solid transparent;
   }
 
+  .runnable-instruments {
+    border-left: 5px solid transparent;
+  }
+
   .collapsible > .runnable-wrapper {
     padding: 0;
 
